# ferumdub

./: .codexrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FLOW.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SYSTEM.md  audit.py  backup.md  bootstrap.sh  dev-requirements.txt  dev_bootstrap.sh  docker-compose.yml  entrypoint.sh  install-dev.sh  install.md  modules.txt  patches.txt  pyproject.toml  requirements.txt  setup-environment.sh  setup.sh
.github/workflows/: ci.yml
docs/: CODEX_SETUP.md  INSTALL_FULL.md  OUTLINE.md
ferum_customs/: __init__.py  api.py  constants.py  custom_hooks.py  dev_hooks.py  hooks.py  install.py  setup.py  test_api.py
ferum_customs/custom_logic/: __init__.py  custom_logic.py  file_attachment_utils.py  payroll_entry_hooks.py  service_object_hooks.py  service_report_hooks.py  service_request_hooks.py
ferum_customs/doctype/: __init__.py
ferum_customs/fixtures/: custom_docperm.json  custom_fields.json  customer.json  notification.json  portal_menu_item.json  role.json  service_object.json  service_project.json  workflow_service_request.json
ferum_customs/notifications/: __init__.py  notifications.py
ferum_customs/patches/: __init__.py
ferum_customs/permissions/: __init__.py  permissions.py
ferum_customs/public/: build.json
ferum_customs/tests/: __init__.py  conftest.py  test_basic.py  test_create_invoice.py  test_service_object_hooks.py  test_service_report_hooks.py  test_service_request_hooks.py  test_utils.py
fixtures/: service_report.json  service_request.json  users.json
(+50 files in other folders)
