[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ferum_customs"
version = "0.1.0"
description = "Custom app for ERPNext 15"
authors = [
  { name = "Vasiliy Rogatchev", email = "vas@example.com" }
]
dependencies = [
  "frappe>=15.0.0",
  "erpnext>=15.0.0"
]
requires-python = ">=3.10"
[tool.bench]
app_name = "ferum_customs"
[tool.mypy]
python_version = "3.10"
strict = false
plugins = []
files = ["ferum_customs"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "ferum_customs.doctype.*"
ignore_errors = true
[tool.ruff]
line-length = 200